--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "@babel/preset-react": "^7.0.0",
     "@rails/webpacker": "^4.0.7",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "postcss-modules": "^1.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "webpack-merge": "^4.2.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.7.1"
